# tax-exempt-orgs-my

./: .gitignore  README.md  app.py  categorize_organizations.md  categorize_organizations.py  pipeline.py  pyproject.toml  research.md
snapshots/: subsection_11D_page1.html  subsection_44_6_page1.html  subsection_44_6_page10.html  subsection_44_6_page100.html  subsection_44_6_page101.html  subsection_44_6_page102.html  subsection_44_6_page103.html  subsection_44_6_page104.html  subsection_44_6_page105.html  subsection_44_6_page106.html  subsection_44_6_page107.html  subsection_44_6_page108.html  subsection_44_6_page109.html  subsection_44_6_page11.html  subsection_44_6_page110.html  subsection_44_6_page111.html  subsection_44_6_page112.html  subsection_44_6_page113.html  subsection_44_6_page114.html  subsection_44_6_page115.html  subsection_44_6_page116.html  subsection_44_6_page117.html  subsection_44_6_page118.html  subsection_44_6_page119.html  subsection_44_6_page12.html  subsection_44_6_page120.html  subsection_44_6_page121.html  subsection_44_6_page122.html  subsection_44_6_page123.html  subsection_44_6_page124.html  subsection_44_6_page13.html  subsection_44_6_page14.html  subsection_44_6_page15.html  subsection_44_6_page16.html  subsection_44_6_page18.html  subsection_44_6_page19.html  subsection_44_6_page2.html  subsection_44_6_page20.html  subsection_44_6_page21.html  subsection_44_6_page22.html  (+85 more)
