[project]
name = "donations-my"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "marimo>=0.19.7",
    "playwright>=1.58.0",
    "polars>=1.37.1",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 120
